--- a/nuestracarta.html
+++ b/nuestracarta.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenidos al ARIŚ</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -20,25 +24,28 @@
 
         header {
             background-color: #002E5D;
-            padding: 0px 0;
+            padding: 10px 0;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 20px;
+            gap: 10px;
             width: 100%;
+            flex-wrap: wrap;
         }
 
         .nav-links {
             display: flex;
-            gap: 10px;
+            gap: 8px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         .nav-links a {
             text-decoration: none;
             color: white;
             font-weight: bold;
-            font-size: 18px;
-            padding: 5px 10px;
+            font-size: 16px;
+            padding: 5px 8px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
@@ -57,18 +64,21 @@
         }
 
         .logo {
-            max-width: 150px;
+            max-width: 120px;
         }
 
         .menu-section {
-            margin: 150px;
+            margin: 20px 15px;
+            width: 100%;
+            max-width: 800px;
         }
 
         .menu-section h2 {
             background-color: #002E5D;
             color: white;
-            padding: 10px;
+            padding: 8px;
             border-radius: 5px;
+            font-size: 1.5em;
         }
 
         .menu-section ul {
@@ -78,9 +88,9 @@
         }
 
         .menu-section li {
-            margin: 10px 0;
+            margin: 8px 0;
             position: relative;
-            padding-left: 25px;
+            padding-left: 20px;
         }
 
         .menu-section li::before {
@@ -88,7 +98,7 @@
             position: absolute;
             left: 0;
             color: gold;
-            font-size: 22px;
+            font-size: 20px;
             line-height: 1;
         }
 
@@ -96,13 +106,14 @@
             text-decoration: none;
             color: #002E5D;
             font-weight: bold;
+            font-size: 0.95em;
         }
 
         footer {
             background-color: #002E5D;
             color: white;
             text-align: center;
-            padding: 20px 0;
+            padding: 15px 0;
             width: 100%;
             position: relative;
             bottom: 0;
@@ -113,7 +124,7 @@
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 15px;
         }
 
         .footer-column {
@@ -125,18 +136,116 @@
         .footer-item {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
         }
 
         .footer-item img {
-            width: 40px;
-            height: 40px;
+            width: 30px;
+            height: 30px;
         }
 
         .footer-bottom {
             width: 100%;
             text-align: center;
-            margin-top: 10px;
+            margin-top: 8px;
+            font-size: 0.9em;
+        }
+
+        @media (min-width: 768px) {
+            .nav-links a {
+                font-size: 18px;
+                padding: 5px 10px;
+            }
+            .logo {
+                max-width: 150px;
+            }
+            .menu-section h2 {
+                font-size: 1.8em;
+            }
+            .menu-section a {
+                font-size: 1em;
+            }
+        }
+
+        @media (min-width: 481px) and (max-width: 767px) {
+            .menu-section {
+                margin: 15px 10px;
+            }
+            .menu-section li {
+                padding-left: 18px;
+            }
+            .menu-section li::before {
+                font-size: 18px;
+            }
+            .menu-section a {
+                font-size: 0.9em;
+            }
+            .footer-item img {
+                width: 28px;
+                height: 28px;
+            }
+            .footer-bottom {
+                font-size: 0.85em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .nav-links {
+                gap: 6px;
+            }
+            .nav-links a {
+                font-size: 14px;
+                padding: 4px 6px;
+            }
+            .logo {
+                max-width: 100px;
+            }
+            header {
+                padding: 8px 0;
+                gap: 8px;
+            }
+            .menu-section {
+                margin: 15px 8px;
+            }
+            .menu-section h2 {
+                font-size: 1.4em;
+                padding: 6px;
+            }
+            .menu-section li {
+                padding-left: 15px;
+            }
+            .menu-section li::before {
+                font-size: 16px;
+            }
+            .menu-section a {
+                font-size: 0.85em;
+            }
+            .footer-item img {
+                width: 25px;
+                height: 25px;
+            }
+            .footer-bottom {
+                font-size: 0.8em;
+            }
+        }
+
+        @media (max-width: 360px) {
+            .nav-links a {
+                font-size: 13px;
+                padding: 3px 5px;
+            }
+            .logo {
+                max-width: 90px;
+            }
+            .menu-section {
+                margin: 10px 5px;
+            }
+            .menu-section h2 {
+                font-size: 1.3em;
+            }
+            .menu-section a {
+                font-size: 0.8em;
+            }
         }
     </style>
 </head>
@@ -154,7 +263,7 @@
             <a href="contacto.html" class="underline">Contacto</a>
         </nav>
     </header>
-    
+
     <section class="menu-section">
         <h2>Nuestra Carta</h2>
         <ul>
@@ -167,14 +276,14 @@
             <li><a href="https://drive.google.com/file/d/1-U_8Pqjv9A6lHi1QBCRGSXE1B4_ve7ny/view?usp=drive_link" target="_blank">Menús y Entradas</a></li>
             <li><a href="https://drive.google.com/file/d/1TIoTxCWM6p4JpIhnY-FY0lpZsButEC7K/view?usp=drive_link" target="_blank">Comidas Regionales, Criollas y Piqueos</a></li>
             <li><a href="https://drive.google.com/file/d/174rW270pQOL8l-b9aY7KMM5_8AzMjlLe/view?usp=drive_link" target="_blank">Otros Platos y Platos Sugeridos</a></li>
-            <li><a href="https://drive.google.com/file/d/118lfsX9ry8wKhC9oJxFK0gPatMc8nyE7/view?usp=drive_link" target="_blank">Platos de Fácil Digestión, Súper Saludables y Vegetarianos</a></li>
+            <li><a href="https://drive.google.com/file/d/118lfsX9ry8wKhC9oJxFK0gPatMc8nyE7/view?usp=drive_link" target="_blank">Platos de Fácil Digestión, Súper S y Vegetarianos</a></li>
             <li><a href="https://drive.google.com/file/d/1LvcpKYBSTwIkTp9KS4VIRTXY6zlu-Nmr/view?usp=drive_link" target="_blank">Gamitana a la Parrilla, Brochetas y Coco</a></li>
             <li><a href="https://drive.google.com/file/d/1m_jjJR9K8EKUgiUuSr87EbREothd0gfW/view?usp=drive_link" target="_blank">Paiche a los 4 Quesos, Salchipapas, Bife Ancho y Menú Criollo</a></li>
             <li><a href="https://drive.google.com/file/d/1Ov6eDzbWq2dCKMdrStU3zsbRfAmGX1QA/view?usp=drive_link" target="_blank">Postres</a></li>
             <li><a href="https://drive.google.com/file/d/1sgN7T2sDxSsPYCIgtSUj11NhQgv-o83F/view?usp=drive_link" target="_blank">Cervezas, Vinos y Afrodisíacos</a></li>
         </ul>
     </section>
-    
+
     <footer>
         <div class="footer-content">
             <div class="footer-column">
@@ -185,18 +294,18 @@
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/phone-call.png" alt="Teléfono">
-                    <p>(065) 24-14-77</p>
+                    <p>(065) 23-14-77</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/phone-call.png" alt="Teléfono">
-                    <p>(065) 24-11-24</p>
+                    <p>(065) 22-12-15</p>
                 </div>
             </div>
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
                     <img src="imagenes/food.png" alt="Horario">
-                    <p>Lunes - Domingo: 7:00 AM - 12:00 AM</p>
+                    <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/icoubica.png" alt="Ubicación">
