--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenidos al ARIŚ</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -16,30 +20,37 @@
             min-height: 100vh;
             color: black;
             align-items: center;
-            background: none;
+            background-image: url("imagenes/HELADOS GIORNATTA 024_edited.jpg");
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-color: transparent;
         }
 
         header {
             background-color: #002E5D;
-            padding: 0px 0;
+            padding: 10px 0;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 20px;
+            gap: 8px;
             width: 100%;
+            flex-wrap: wrap;
         }
 
         .nav-links {
             display: flex;
-            gap: 10px;
+            gap: 6px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         .nav-links a {
             text-decoration: none;
             color: white;
             font-weight: bold;
-            font-size: 18px;
-            padding: 5px 10px;
+            font-size: 16px;
+            padding: 5px 8px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
@@ -58,31 +69,66 @@
         }
 
         .logo {
-            max-width: 150px;
+            max-width: 120px;
         }
 
         main {
-            padding: 20px;
-            margin: 20px;
+            padding: 15px;
+            margin: 15px;
             border-radius: 10px;
-            min-height: 100px;
+            flex-grow: 1;
+            width: 100%;
+            max-width: 800px;
+            background: transparent;
         }
 
         .imagen-ajustable {
-            width: 300%;
-            max-width: 250px;
+            width: 100%;
+            max-width: 500px;
             border-radius: 10px;
-            margin-top: 20px;
+            margin: 15px auto;
+            display: block;
+            object-fit: cover;
+            background: transparent;
+        }
+
+        main h1 {
+            font-size: 1.8em;
+            margin: 15px 0;
+            color: white; /* Improved contrast against background */
+        }
+
+        main p {
+            font-size: 1em;
+            margin: 8px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            color: white; /* Improved contrast */
+        }
+
+        main p img {
+            width: 18px;
+            height: 18px;
+        }
+
+        iframe {
+            width: 100%;
+            max-width: 600px;
+            height: 350px;
+            border: 0;
+            border-radius: 10px;
+            margin: 15px auto;
+            display: block;
         }
 
         footer {
             background-color: #002E5D;
             color: white;
             text-align: center;
-            padding: 20px 0;
+            padding: 15px 0;
             width: 100%;
-            position: relative;
-            bottom: 0;
             margin-top: auto;
         }
 
@@ -90,7 +136,7 @@
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 12px;
         }
 
         .footer-column {
@@ -102,18 +148,198 @@
         .footer-item {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
         }
 
         .footer-item img {
-            width: 40px;
-            height: 40px;
+            width: 28px;
+            height: 28px;
         }
 
         .footer-bottom {
             width: 100%;
             text-align: center;
-            margin-top: 10px;
+            margin-top: 8px;
+            font-size: 0.9em;
+        }
+
+        @media (min-width: 1200px) {
+            .nav-links a {
+                font-size: 18px;
+                padding: 6px 12px;
+            }
+            .logo {
+                max-width: 150px;
+            }
+            main h1 {
+                font-size: 2em;
+            }
+            main p {
+                font-size: 1.1em;
+            }
+            main p img {
+                width: 20px;
+                height: 20px;
+            }
+            .imagen-ajustable {
+                max-width: 600px;
+            }
+            iframe {
+                height: 400px;
+            }
+        }
+
+        @media (min-width: 768px) and (max-width: 1199px) {
+            .nav-links a {
+                font-size: 17px;
+                padding: 5px 10px;
+            }
+            .logo {
+                max-width: 130px;
+            }
+            main h1 {
+                font-size: 1.9em;
+            }
+            main p {
+                font-size: 1em;
+            }
+            .imagen-ajustable {
+                max-width: 500px;
+            }
+            iframe {
+                height: 380px;
+            }
+            .footer-item img {
+                width: 30px;
+                height: 30px;
+            }
+        }
+
+        @media (min-width: 481px) and (max-width: 767px) {
+            header {
+                gap: 6px;
+                padding: 8px 0;
+            }
+            .nav-links {
+                gap: 5px;
+            }
+            .nav-links a {
+                font-size: 15px;
+                padding: 4px 7px;
+            }
+            .logo {
+                max-width: 110px;
+            }
+            main {
+                padding: 12px;
+                margin: 12px;
+            }
+            .imagen-ajustable {
+                max-width: 400px;
+            }
+            main h1 {
+                font-size: 1.6em;
+            }
+            main p {
+                font-size: 0.95em;
+            }
+            main p img {
+                width: 16px;
+                height: 16px;
+            }
+            iframe {
+                height: 300px;
+            }
+            .footer-item img {
+                width: 26px;
+                height: 26px;
+            }
+            .footer-bottom {
+                font-size: 0.85em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header {
+                flex-direction: column;
+                gap: 5px;
+                padding: 6px 0;
+            }
+            .nav-links {
+                gap: 4px;
+                flex-direction: column;
+                align-items: center;
+            }
+            .nav-links a {
+                font-size: 14px;
+                padding: 4px 6px;
+            }
+            .logo {
+                max-width: 100px;
+            }
+            main {
+                padding: 10px;
+                margin: 10px;
+            }
+            .imagen-ajustable {
+                max-width: 100%;
+            }
+            main h1 {
+                font-size: 1.5em;
+            }
+            main p {
+                font-size: 0.9em;
+            }
+            main p img {
+                width: 15px;
+                height: 15px;
+            }
+            iframe {
+                height: 250px;
+            }
+            .footer-item img {
+                width: 24px;
+                height: 24px;
+            }
+            .footer-bottom {
+                font-size: 0.8em;
+            }
+        }
+
+        @media (max-width: 360px) {
+            header {
+                padding: 5px 0;
+            }
+            .nav-links a {
+                font-size: 13px;
+                padding: 3px 5px;
+            }
+            .logo {
+                max-width: 90px;
+            }
+            main h1 {
+                font-size: 1.4em;
+            }
+            main p {
+                font-size: 0.85em;
+            }
+            main p img {
+                width: 14px;
+                height: 14px;
+            }
+            .imagen-ajustable {
+                max-width: 100%;
+            }
+            iframe {
+                height: 200px;
+            }
+            .footer-item img {
+                width: 22px;
+                height: 22px;
+            }
+            .footer-bottom {
+                font-size: 0.75em;
+            }
         }
     </style>
 </head>
@@ -136,11 +362,11 @@
     <main>
         <img src="imagenes/delyv.png" alt="Imagen del Restaurante" class="imagen-ajustable">
         <h1>TELÉFONOS:</h1>
-        <p><img src="imagenes/phone-call.png" alt="Teléfono" width="20"> (065) 23-14-70</p>
-        <p><img src="imagenes/phone-call.png" alt="Teléfono" width="20"> (065) 24-14-77</p>
-        <p><img src="imagenes/phone-call.png" alt="Teléfono" width="20"> (065) 24-11-24</p>
+        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 23-14-70</p>
+        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 23-14-77</p>
+        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 22-12-15</p>
         
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.277761779523!2d-73.24642932502604!3d-3.749572096224319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ea107035f100c3%3A0xd320e6212846b395!2sAri's%20Burger!5e0!3m2!1ses!2spe!4v1739562939942!5m2!1ses!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.277761779523!2d-73.24642932502604!3d-3.749572096224319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ea107035f100c3%3A0xd320e6212846b395!2sAri's%20Burger!5e0!3m2!1ses!2spe!4v1739562939942!5m2!1ses!2spe" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
 
     <footer>
@@ -153,18 +379,18 @@
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/phone-call.png" alt="Teléfono">
-                    <p>(065) 24-14-77</p>
+                    <p>(065) 23-14-77</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/phone-call.png" alt="Teléfono">
-                    <p>(065) 24-11-24</p>
+                    <p>(065) 22-12-15</p>
                 </div>
             </div>
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
                     <img src="imagenes/food.png" alt="Horario">
-                    <p>Lunes - Domingo: 7:00 AM - 12:00 AM</p>
+                    <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/icoubica.png" alt="Ubicación">
