--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -11,19 +11,20 @@
         }
 
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             text-align: center;
+            background-image: url("imagenes/HELADOS GIORNATTA 024_edited.jpg");
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-            color: black;
+            color: white;
             align-items: center;
-            background: #FFFFFF; /* White background as requested */
-            /* Suggestion: For a subtle gradient, try:
-               background: linear-gradient(to bottom, #ffffff, #f5f5f5);
-            */
+            background-color: #f5f5f5; /* Fondo alternativo para móviles */
         }
 
         header {
@@ -72,66 +73,62 @@
         }
 
         main {
-            padding: 20px;
-            margin: 20px;
+            padding: 15px;
+            margin: 15px;
             border-radius: 10px;
             flex-grow: 1;
-            width: 100%;
-            max-width: 800px;
-            background: transparent;
-            display: block;
-            overflow: visible;
-            /* Suggestion: For a card-like effect, try:
-               box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            */
         }
 
-        .imagen-ajustable {
-            width: 100%;
-            max-width: 500px;
-            border-radius: 10px;
-            margin: 20px auto;
-            display: block;
-            object-fit: cover;
-            background: transparent;
-        }
-
-        main h1 {
-            font-size: 2em;
-            margin: 20px 0;
-            color: #000; /* Black text */
-            font-weight: 600;
-        }
-
-        main p {
-            font-size: 1.1em;
-            margin: 10px 0;
+        .contenedor-central {
             display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            margin-top: 20px;
+            flex-wrap: wrap;
+        }
+
+        .bloque {
+            display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 10px;
-            color: #000; /* Black text */
-        }
-
-        main p img {
-            width: 20px;
-            height: 20px;
-            vertical-align: middle;
-            transition: transform 0.2s ease;
-        }
-
-        main p img:hover {
-            transform: scale(1.2); /* Suggestion: Hover effect for icons */
-        }
-
-        iframe {
             width: 100%;
-            max-width: 600px;
-            height: 350px;
-            border: 0;
-            border-radius: 10px;
-            margin: 20px auto;
-            display: block;
+            max-width: 500px;
+            height: 400px;
+            border-radius: 20px;
+            padding: 15px;
+            margin: 10px;
+            text-align: center;
+        }
+
+        .bloque img {
+            max-width: 60px;
+            margin-bottom: 10px;
+        }
+
+        .bloque h3 {
+            font-size: 1.4em;
+            margin: 10px 0;
+        }
+
+        .bloque p {
+            font-size: 0.95em;
+            line-height: 1.4;
+            margin: 0;
+        }
+
+        .bloque1 {
+            background-color: #C622E3;
+        }
+
+        .bloque2 {
+            background-color: #EDEDED;
+            color: black;
+        }
+
+        .bloque3 {
+            background-color: #4BD1A0;
         }
 
         footer {
@@ -175,6 +172,27 @@
         }
 
         @media (min-width: 1200px) {
+            .contenedor-central {
+                flex-wrap: nowrap;
+                gap: 20px;
+                margin-top: 30px;
+            }
+            .bloque {
+                max-width: 400px;
+                height: 450px;
+                border-radius: 30px;
+                padding: 20px;
+                margin: 15px;
+            }
+            .bloque img {
+                max-width: 80px;
+            }
+            .bloque h3 {
+                font-size: 1.6em;
+            }
+            .bloque p {
+                font-size: 1em;
+            }
             .nav-links a {
                 font-size: 18px;
                 padding: 6px 12px;
@@ -182,25 +200,33 @@
             .logo {
                 max-width: 150px;
             }
-            main h1 {
-                font-size: 2.2em;
-            }
-            main p {
-                font-size: 1.2em;
-            }
-            main p img {
-                width: 22px;
-                height: 22px;
-            }
-            .imagen-ajustable {
-                max-width: 600px;
-            }
-            iframe {
-                height: 400px;
+            main {
+                padding: 20px;
+                margin: 20px;
             }
         }
 
         @media (min-width: 768px) and (max-width: 1199px) {
+            .contenedor-central {
+                flex-wrap: wrap;
+                gap: 15px;
+            }
+            .bloque {
+                max-width: 350px;
+                height: 400px;
+                border-radius: 25px;
+                padding: 15px;
+                margin: 10px;
+            }
+            .bloque img {
+                max-width: 70px;
+            }
+            .bloque h3 {
+                font-size: 1.5em;
+            }
+            .bloque p {
+                font-size: 0.95em;
+            }
             .nav-links a {
                 font-size: 17px;
                 padding: 5px 10px;
@@ -208,21 +234,9 @@
             .logo {
                 max-width: 130px;
             }
-            main h1 {
-                font-size: 2em;
-            }
-            main p {
-                font-size: 1.1em;
-            }
-            .imagen-ajustable {
-                max-width: 500px;
-            }
-            iframe {
-                height: 380px;
-            }
-            .footer-item img {
-                width: 30px;
-                height: 30px;
+            main {
+                padding: 15px;
+                margin: 15px;
             }
         }
 
@@ -241,25 +255,26 @@
             .logo {
                 max-width: 110px;
             }
-            main {
-                padding: 15px;
-                margin: 15px;
+            .contenedor-central {
+                flex-direction: column;
+                gap: 10px;
+                margin-top: 15px;
             }
-            .imagen-ajustable {
-                max-width: 400px;
+            .bloque {
+                max-width: 100%;
+                height: 350px;
+                border-radius: 20px;
+                padding: 12px;
+                margin: 8px;
             }
-            main h1 {
-                font-size: 1.8em;
+            .bloque img {
+                max-width: 60px;
             }
-            main p {
-                font-size: 1em;
+            .bloque h3 {
+                font-size: 1.3em;
             }
-            main p img {
-                width: 18px;
-                height: 18px;
-            }
-            iframe {
-                height: 300px;
+            .bloque p {
+                font-size: 0.9em;
             }
             .footer-item img {
                 width: 26px;
@@ -288,25 +303,31 @@
             .logo {
                 max-width: 100px;
             }
-            main {
-                padding: 12px;
-                margin: 12px;
+            .contenedor-central {
+                flex-direction: column;
+                gap: 8px;
+                margin-top: 10px;
             }
-            .imagen-ajustable {
+            .bloque {
                 max-width: 100%;
+                height: 300px;
+                border-radius: 15px;
+                padding: 10px;
+                margin: 6px;
             }
-            main h1 {
-                font-size: 1.6em;
+            .bloque img {
+                max-width: 50px;
             }
-            main p {
-                font-size: 0.95em;
+            .bloque h3 {
+                font-size: 1.2em;
             }
-            main p img {
-                width: 16px;
-                height: 16px;
+            .bloque p {
+                font-size: 0.85em;
+                line-height: 1.3;
             }
-            iframe {
-                height: 250px;
+            main {
+                padding: 10px;
+                margin: 10px;
             }
             .footer-item img {
                 width: 24px;
@@ -328,21 +349,23 @@
             .logo {
                 max-width: 90px;
             }
-            main h1 {
-                font-size: 1.5em;
+            .contenedor-central {
+                margin-top: 8px;
             }
-            main p {
-                font-size: 0.9em;
+            .bloque {
+                height: 280px;
+                border-radius: 12px;
+                padding: 8px;
+                margin: 5px;
             }
-            main p img {
-                width: 14px;
-                height: 14px;
+            .bloque img {
+                max-width: 45px;
             }
-            .imagen-ajustable {
-                max-width: 100%;
+            .bloque h3 {
+                font-size: 1.1em;
             }
-            iframe {
-                height: 200px;
+            .bloque p {
+                font-size: 0.8em;
             }
             .footer-item img {
                 width: 22px;
@@ -371,13 +394,23 @@
     </header>
     
     <main>
-        <img src="imagenes/delyv.png" alt="Imagen del Restaurante" class="imagen-ajustable">
-        <h1>TELÉFONOS:</h1>
-        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 23-14-70</p>
-        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 23-14-77</p>
-        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 22-12-15</p>
-        
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.277761779523!2d-73.24642932502604!3d-3.749572096224319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ea107035f100c3%3A0xd320e6212846b395!2sAri's%20Burger!5e0!3m2!1ses!2spe!4v1739562939942!5m2!1ses!2spe" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="contenedor-central">
+            <div class="bloque bloque1">
+                <img src="imagenes/cerro.png" alt="Ícono 1">
+                <h3>Misión</h3>
+                <p>"Nos esforzamos por ofrecer a nuestros clientes un servicio excepcional, una amplia variedad de platos y productos de la mejor calidad."</p>
+            </div>
+            <div class="bloque bloque2">
+                <img src="imagenes/ojo.png" alt="Ícono 2">
+                <h3>Visión</h3>
+                <p>"Convertirnos en una empresa líder en el mercado, reconocida a nivel internacional por nuestra excelencia en calidad, servicio y variedad gastronómica."</p>
+            </div>
+            <div class="bloque bloque3">
+                <img src="imagenes/arbol.png" alt="Ícono 3">
+                <h3>Valores</h3>
+                <p>"Nos comprometemos a generar empleo para contribuir al bienestar de la sociedad y a formar nuevos chefs, brindándoles las herramientas y conocimientos necesarios para que, en el futuro, puedan independizarse y crear sus propias empresas."</p>
+            </div>
+        </div>
     </main>
 
     <footer>
