--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -423,18 +423,18 @@
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/phone-call.png" alt="Teléfono">
-                    <p>(065) 23-14-77</p>
+                    <p>(065) 24-14-77</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/phone-call.png" alt="Teléfono">
-                    <p>(065) 22-12-15</p>
+                    <p>(065) 24-11-24</p>
                 </div>
             </div>
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
                     <img src="imagenes/food.png" alt="Horario">
-                    <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
+                    <p>Lunes - Domingo: 7:00 AM - 12:00 AM</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/icoubica.png" alt="Ubicación">
