--- a/contacto.html
+++ b/contacto.html
@@ -374,8 +374,8 @@
         <img src="imagenes/delyv.png" alt="Imagen del Restaurante" class="imagen-ajustable">
         <h1>TELÉFONOS:</h1>
         <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 23-14-70</p>
-        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 23-14-77</p>
-        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 22-12-15</p>
+        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 24-14-77</p>
+        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 24-11-24</p>
         
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.277761779523!2d-73.24642932502604!3d-3.749572096224319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ea107035f100c3%3A0xd320e6212846b395!2sAri's%20Burger!5e0!3m2!1ses!2spe!4v1739562939942!5m2!1ses!2spe" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
@@ -390,18 +390,18 @@
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/phone-call.png" alt="Teléfono">
-                    <p>(065) 23-14-77</p>
+                    <p>(065) 24-14-77</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/phone-call.png" alt="Teléfono">
-                    <p>(065) 22-12-15</p>
+                    <p>(065) 24-11-24</p>
                 </div>
             </div>
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
                     <img src="imagenes/food.png" alt="Horario">
-                    <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
+                    <p>Lunes - Domingo: 7:00 AM - 12:00 AM</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/icoubica.png" alt="Ubicación">
