--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,8 @@
 
         header {
             background-color: #002E5D;
-            padding: 10px 0;
+            /* ajusta exactamente la imagen logo con el tamaño del encabezado */
+            padding: 0px 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -87,7 +88,7 @@
         }
 
         .imagen-ajustable {
-            width: 100%;
+            width: 50%;
             max-width: 500px;
             border-radius: 10px;
             margin: 20px auto;
@@ -177,10 +178,12 @@
         @media (min-width: 1200px) {
             .nav-links a {
                 font-size: 18px;
+                /* junta a las letras del menu del encabezado */
                 padding: 6px 12px;
             }
-            .logo {
-                max-width: 150px;
+            /* agranda la imagen del logo del encabezado */
+            .logo { 
+                max-width: 150px; 
             }
             main h1 {
                 font-size: 2.2em;
@@ -357,13 +360,14 @@
 
 <body>
     <header>
+        <div class="logo-container">
+            <img src="imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
+        </div>
         <nav class="nav-links">
             <a href="index.html" class="underline">Inicio</a>
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
-        <div class="logo-container">
-            <img src="imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
-        </div>
+        
         <nav class="nav-links">
             <a href="nuestracarta.html" class="underline">Nuestra Carta</a>
             <a href="contacto.html" class="underline">Contacto</a>
